:white_check_mark: Completed discrete anomaly detection exercises

--- a/discrete_anomaly_detection.ipynb
+++ b/discrete_anomaly_detection.ipynb
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "97de9675-37b6-47ea-bbe5-41a4ee420eb2",
    "metadata": {},
    "outputs": [],
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "0399043c-2c4f-40e1-b167-c78e1b9cd8d5",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "551fb039-9a8b-4bc8-af03-cc7d6e4861dc",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
        "Name: day_of_week, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "b424eff9-cc59-49cb-a104-b637b59fd84d",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "Name: hour, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "20826060-c4f2-4fed-94b3-86a7f6df9eb7",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "69fc0ae0-33b8-4f37-a97e-1057fd154925",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
        "2019-04-17 04:25:50   Wednesday     4  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "25e778ae-2886-45a6-8351-398ad438d787",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
        "Name: user_agent, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,64 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "a64bcadc-d240-4470-b0c5-7a1613a4c3cb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13974"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "3dcd1394-88a9-4c37-947d-b49600d837b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "hour\n",
-       "0     0.001073\n",
-       "4     0.000072\n",
-       "6     0.005009\n",
-       "13    0.160584\n",
-       "14    0.328252\n",
-       "15    0.245456\n",
-       "16    0.120510\n",
-       "17    0.000143\n",
-       "18    0.000572\n",
-       "19    0.027193\n",
-       "20    0.020323\n",
-       "21    0.057750\n",
-       "22    0.014956\n",
-       "23    0.018105\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.groupby('hour').size() / df.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "7450b6e5-3e55-4912-b88e-03eb4f6e91f6",
    "metadata": {},
    "outputs": [],
@@ -1028,8 +971,42 @@
     "# Let's create a function that will return all anomalous data for a given column provided some threshold for \n",
     "# determining what is anomalous.\n",
     "\n",
-    "def get_anomalies(df, column, threshold):\n",
-    "    "
+    "def get_anomalies(df, groupby_columns, threshold):\n",
+    "    '''\n",
+    "        Group the dataframe by the given columns and return all observations \n",
+    "        where the proportion of values compared to the whole is less than the \n",
+    "        threshold.\n",
+    "    '''\n",
+    "    \n",
+    "    proportions = df.groupby(groupby_columns).size() / df.shape[0]\n",
+    "    return proportions[proportions < threshold]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "48662ddf-d08a-4034-9204-ba236f1a2cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "day_of_week  hour\n",
+       "Tuesday      17      0.000143\n",
+       "             18      0.000572\n",
+       "Wednesday    0       0.001073\n",
+       "             4       0.000072\n",
+       "             6       0.005009\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_anomalies(df, ['day_of_week', 'hour'], 0.01)"
    ]
   }
  ],
